# ChangeLog for dev-ruby/dust
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/ChangeLog,v 1.1 2009/04/25 12:34:46 flameeyes Exp $

*dust-0.1.6 (25 Apr 2009)

  25 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +dust-0.1.6.ebuild:
  Initial import of dev-ruby/dust (test dependency for sparklines).
