@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/dust-0.1.6.ebuild,v 1.1 2009/04/25 12:34:46 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/dust-0.1.6.ebuild,v 1.2 2009/06/13 07:16:03 graaff Exp $
 
 inherit gems
 
@@ -8,7 +8,7 @@ DESCRIPTION="Descriptive block syntax definition for Test::Unit."
 HOMEPAGE="http://dust.rubyforge.org/"
 LICENSE="MIT"
 
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 SLOT="0"
 IUSE=""
 
