@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST ruby-oci8-1.0.3.tar.gz 117797 RMD160 04e0d8e994fe51d704f5782a416627c18434de10 SHA1 ab8cfb68082e1ac3711069736ab2a21e8886967d SHA256 85b89aeb390954eda5be201b4261c1af0bdfe6076d6a5946e137eb109cd9bf7a
+DIST ruby-oci8-1.0.6.tar.gz 121758 RMD160 0ed1e7108b660ddad4317065a7f0a1f0ec957cc5 SHA1 b17f0e2b63d1b3a79414ac89cafe44cd4c352090 SHA256 b1b7d88acae1c9f527070bc47d7a8e14ade94d8886038327a0ce20e539d3d502
 EBUILD ruby-oci8-1.0.3.ebuild 694 RMD160 c40547115e8342f53907113f661644a320e85598 SHA1 21c84e87527d83d57577662ce88bb59a4ef1e082 SHA256 e6b06f6f167de3a1d51d95bb15ed565c7c291fd9e8257a6bfcfec85e72cafe13
-MISC ChangeLog 1258 RMD160 e20c70e58534bf74956e97643d2ec3bf4cc14979 SHA1 2093755e24cceea3dd8e909fb8a9b595ecada3d8 SHA256 e6200a5686caf62e3b1c6b971c020c44358e49ff2fd4e06f99968c339795e2c4
+EBUILD ruby-oci8-1.0.6.ebuild 719 RMD160 9edd9318146e1e650d0a07a1d030e8acc7e73404 SHA1 5be34dd1ad60d6b438f5f3ad850810153cd0cf8e SHA256 73f8754e3d15efadb3d50e54607f1972cfe29280986252d1c4a7c6fd3a677817
+MISC ChangeLog 1422 RMD160 ed820ab97d1c4c78514bc8146654c15b4f717809 SHA1 1564fb07c17091db56b5d1282df3a23efeee8221 SHA256 7add8dc8d1191e41338948c2bb772afab28115d4e0ffc2d3176b31fa9b0bfa3c
 MISC metadata.xml 321 RMD160 757ae03106f1ef258a196454fa67c3d5f0d06a88 SHA1 71472b8246bdc2d048540a64da47ec8abd683768 SHA256 d44a122ea0ed7c9a8b402fbb4b4c6a738a256efa9a49928cdd3d390c4324abd8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkopZqoACgkQqj4ysMWt/vuPrgCfbZ2lVSI/3LyrxwebPcSvAsuc
-wNwAn1Ve62Dx4la3MRLfjolwv0a/wyVf
-=r5MN
+iEYEARECAAYFAkozU+kACgkQVYU2Ai8K93dPLwCgpxfGiyxysNLTf/rjomm0vieb
+d88AoJbvnByVHjuilZ7lItGTdih/7ofX
+=eI9z
 -----END PGP SIGNATURE-----
