@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sparklines/sparklines-0.5.2.ebuild,v 1.2 2009/05/04 11:52:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sparklines/sparklines-0.5.2.ebuild,v 1.3 2009/06/13 07:20:10 graaff Exp $
 
 inherit ruby
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://rubyforge/${PN}/${P}.tgz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 IUSE="doc test"
 
 RDEPEND="dev-ruby/rmagick"
