@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/sparklines
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sparklines/ChangeLog,v 1.2 2009/05/04 11:52:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sparklines/ChangeLog,v 1.3 2009/06/13 07:20:10 graaff Exp $
+
+  27 May 2009; Hans de Graaff <graaff@gentoo.org> sparklines-0.5.2.ebuild:
+  Also works on x86, keywording.
 
   04 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   sparklines-0.5.2.ebuild:
