@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tidy_table
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tidy_table/ChangeLog,v 1.2 2009/05/04 11:52:59 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tidy_table/ChangeLog,v 1.3 2009/06/13 07:18:00 graaff Exp $
+
+  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> tidy_table-0.0.5.ebuild:
+  Add ~x86 keyword.
 
   04 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   tidy_table-0.0.5.ebuild:
