@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/dust
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/ChangeLog,v 1.1 2009/04/25 12:34:46 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/dust/ChangeLog,v 1.2 2009/06/13 07:16:03 graaff Exp $
+
+  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> dust-0.1.6.ebuild:
+  Add ~x86 keyword.
 
 *dust-0.1.6 (25 Apr 2009)
 
